add native functions pdf_buf_pack_32_8_W, pdf_buf_pack_8_32_W

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 all: resources/lib/libpdf%SO% %FAKESO%
 
-resources/lib/libpdf%SO%: libpdf%O%
+resources/lib/libpdf%SO%: libpdf/buf%O%
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/lib/libpdf%SO% libpdf/buf%O%
 
-libpdf%O%: libpdf/buf.c libpdf/buf.h
+libpdf/buf%O%: libpdf/buf.c libpdf/buf.h
 	%CC% -I . -c %CCSHARED% %CCFLAGS% %CCOUT%libpdf/buf%O% libpdf/buf.c
