--- a/Makefile.in
+++ b/Makefile.in
@@ -1,19 +1,25 @@
+SRC=src
+
 all: resources/lib/libpdf%SO% %FAKESO%
 
-resources/lib/libpdf%SO%: libpdf/pdf_buf%O% libpdf/pdf_filt_predict%O% libpdf/pdf_filt_predict_tiff%O% libpdf/pdf_filt_predict_png%O%
-	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/lib/libpdf%SO% libpdf/pdf_buf%O% libpdf/pdf_filt_predict%O% libpdf/pdf_filt_predict_tiff%O% libpdf/pdf_filt_predict_png%O%
+resources/lib/libpdf%SO%: $(SRC)/libpdf/pdf_buf%O% $(SRC)/libpdf/pdf_filt_predict%O% $(SRC)/libpdf/pdf_filt_predict_tiff%O% $(SRC)/libpdf/pdf_filt_predict_png%O%
+	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/lib/libpdf%SO% $(SRC)/libpdf/pdf_buf%O% $(SRC)/libpdf/pdf_filt_predict%O% $(SRC)/libpdf/pdf_filt_predict_tiff%O% $(SRC)/libpdf/pdf_filt_predict_png%O%
 
-libpdf/pdf_buf%O%: libpdf/pdf_buf.c libpdf/pdf_buf.h
-	%CC% -I . -c %CCSHARED% %CCFLAGS% %CCOUT%libpdf/pdf_buf%O% libpdf/pdf_buf.c
+$(SRC)/libpdf/pdf_buf%O%: $(SRC)/libpdf/pdf_buf.c $(SRC)/libpdf/pdf_buf.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/libpdf/pdf_buf%O% $(SRC)/libpdf/pdf_buf.c
 
-libpdf/pdf_filt_predict%O%: libpdf/pdf_filt_predict.c libpdf/pdf_filt_predict.h libpdf/pdf_filt_predict_tiff.h libpdf/pdf_filt_predict_png.h
-	%CC% -I . -c %CCSHARED% %CCFLAGS% %CCOUT%libpdf/pdf_filt_predict%O% libpdf/pdf_filt_predict.c
+$(SRC)/libpdf/pdf_filt_predict%O%: $(SRC)/libpdf/pdf_filt_predict.c $(SRC)/libpdf/pdf_filt_predict.h $(SRC)/libpdf/pdf_filt_predict_tiff.h $(SRC)/libpdf/pdf_filt_predict_png.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/libpdf/pdf_filt_predict%O% $(SRC)/libpdf/pdf_filt_predict.c
 
-libpdf/pdf_filt_predict_tiff%O%: libpdf/pdf_filt_predict_tiff.c libpdf/pdf_filt_predict_tiff.h
-	%CC% -I . -c %CCSHARED% %CCFLAGS% %CCOUT%libpdf/pdf_filt_predict_tiff%O% libpdf/pdf_filt_predict_tiff.c
+$(SRC)/libpdf/pdf_filt_predict_tiff%O%: $(SRC)/libpdf/pdf_filt_predict_tiff.c $(SRC)/libpdf/pdf_filt_predict_tiff.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/libpdf/pdf_filt_predict_tiff%O% $(SRC)/libpdf/pdf_filt_predict_tiff.c
 
-libpdf/pdf_filt_predict_png%O%: libpdf/pdf_filt_predict_png.c libpdf/pdf_filt_predict_png.h
-	%CC% -I . -c %CCSHARED% %CCFLAGS% %CCOUT%libpdf/pdf_filt_predict_png%O% libpdf/pdf_filt_predict_png.c
+$(SRC)/libpdf/pdf_filt_predict_png%O%: $(SRC)/libpdf/pdf_filt_predict_png.c $(SRC)/libpdf/pdf_filt_predict_png.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/libpdf/pdf_filt_predict_png%O% $(SRC)/libpdf/pdf_filt_predict_png.c
+
+test ::
+	@prove -e'perl6 -I lib' -v t
 
 clean ::
-	@rm -f libpdf/*.o resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dylib resources/lib/libpdf.so
+	@rm -f $(SRC)/libpdf/*.o resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dylib resources/lib/libpdf.so
+
