--- a/Makefile.in
+++ b/Makefile.in
@@ -20,6 +20,9 @@ $(SRC)/libpdf/pdf_filt_predict_png%O%: $(SRC)/libpdf/pdf_filt_predict_png.c $(SR
 test : all
 	@prove -e'perl6 -I lib' -v t
 
+memtest : all
+	@prove -e'perl6-valgrind-m -I lib' -v t
+
 clean ::
 	@rm -f $(SRC)/libpdf/*.o resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dll resources/lib/libpdf.dylib resources/lib/libpdf.so
 
