--- a/Makefile.in
+++ b/Makefile.in
@@ -1,14 +1,17 @@
 SRC=src
-
+# set $COVERAGE to enable coverage reporting
+# e.g. % make COVERAGE=1
+CC_OPT = $(if $(COVERAGE),-coverage,)
+LD_OPT = $(if $(COVERAGE),-lgcov,)
 all: resources/lib/libpdf%SO% %FAKESO%
 
 objects=$(SRC)/libpdf/pdf_buf%O% $(SRC)/libpdf/pdf_encode%O% $(SRC)/libpdf/pdf_filt_predict%O% $(SRC)/libpdf/pdf_filt_predict_tiff%O% $(SRC)/libpdf/pdf_filt_predict_png%O%
 
 resources/lib/libpdf%SO%: $(objects)
-	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/lib/libpdf%SO% $(objects)
+	%LD% %LDSHARED% %LDFLAGS%  %LDOUT%resources/lib/libpdf%SO% $(objects) $(LD_OPT)
 
 $(objects): %%O%: %.c
-	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$@ $<
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% $(CC_OPT) %CCOUT%$@ $<
 
 test : all
 	@prove -e'perl6 -I lib' -v t
