more on code coverage.
Now have a 'coverage' target that works from the command line.
See if it works with codecov dispatch from travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: perl6
-env:
-  - COVERAGE=1
 sudo: false
 perl6:
   - latest
@@ -9,5 +7,7 @@ install:
   - rakudobrew build-zef
   - zef --depsonly install .
   - zef build .
+script:
+  - make coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
