renamed c sources. add .depend target for includes

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,10 +1,10 @@
 all :
-	(cd src/libpdf && $(MAKE) all)
+	(cd src/pdf && $(MAKE) all)
 
 test-coverage :
 	export COVERAGE=1;\
 	$(MAKE) clean test;\
-	cd src/libpdf && $(MAKE) coverage-reports
+	cd src/pdf && $(MAKE) coverage-reports
 
 test : all
 	@prove -e'perl6 -I lib' -v t
@@ -13,5 +13,5 @@ memtest : all
 	@prove -e'perl6-valgrind-m -I lib' -v t
 
 clean :
-	(cd src/libpdf && $(MAKE) $@)
+	(cd src/pdf && $(MAKE) $@)
 
