factor out base64 encoding
exporting to new Base4::Native module

--- a/src/pdf/Makefile.in
+++ b/src/pdf/Makefile.in
@@ -3,7 +3,7 @@
 CC_OPT = $(if $(COVERAGE),-fprofile-arcs -ftest-coverage,)
 LD_OPT = $(if $(COVERAGE),-coverage -lgcov,)
 
-SRCS = buf.c base64.c filt_predict.c filt_predict_tiff.c filt_predict_png.c
+SRCS = buf.c filt_predict.c filt_predict_tiff.c filt_predict_png.c
 OBJS=$(SRCS:.c=%O%)
 
 all: %DEST%/libpdf%SO%
