--- a/src/pdf/Makefile.in
+++ b/src/pdf/Makefile.in
@@ -3,7 +3,7 @@
 all: %DEST%/libpdf%SO%
 
 SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c write.c
-OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% write%O%
+OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% write%O% version%O%
 
 %DEST%/libpdf%SO%: $(OBJS)
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%%DEST%/libpdf%SO% $(OBJS) $(LD_COV_OPT)
@@ -22,6 +22,9 @@ filt_predict_tiff%O% :
 
 write%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ write.c
+
+version%O% :
+	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ version.c
 
 coverage-reports : all
 	gcov *.c
