--- a/src/pdf/Makefile.in
+++ b/src/pdf/Makefile.in
@@ -2,8 +2,8 @@
 
 all: %DEST%/libpdf%SO%
 
-SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c write.c
-OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% write%O% version%O%
+SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c read.c write.c
+OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% read%O% write%O% version%O%
 
 %DEST%/libpdf%SO%: $(OBJS)
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%%DEST%/libpdf%SO% $(OBJS) $(LD_COV_OPT)
@@ -19,6 +19,9 @@ filt_predict_png%O% :
 
 filt_predict_tiff%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ filt_predict_tiff.c
+
+read%O% :
+	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ read.c
 
 write%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ write.c
