force install LibraryMake for Windows testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
+          zef install --/test LibraryMake
           zef install --/test App::Prove6
           zef install --deps-only .
           zef build .
