--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,13 +9,30 @@ on:
   pull_request:
 
 jobs:
+  build-libraries:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: chetan/git-restore-mtime-action@v1
+      - name: Setup
+        run: |
+          choco install make
+          choco install mingw
+          refreshenv
+      - name: Update DLL
+        run: |
+          make -f build\makefile-windows dll # build distribution dll
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Automated Windows DLL save
+          file_pattern: resources/libraries/pdf.dll
   raku:
     strategy:
       matrix:
         os:
           - ubuntu-latest
           - macOS-latest
-         # - windows-latest
+          - windows-latest
         raku-version:
           - 'latest'
           - '2021.12'
@@ -36,3 +53,6 @@ jobs:
           zef build .
       - name: Run Tests
         run: prove6 -I. t
+        # also verify compatibility with last PDF version
+        zef install .
+        zef --verbose install PDF
