--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,8 @@ jobs:
           zef install --deps-only .
           zef build .
       - name: Run Tests
-        run: prove6 -I. t
+        run: |
+        prove6 -I. t
         # also verify compatibility with last PDF version
         zef install .
         zef --verbose install PDF
