--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,12 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: Raku/setup-raku@v1
+        with:
+          raku-version: '2022.04'
+      - uses: actions/checkout@v2
       - uses: chetan/git-restore-mtime-action@v1
-      - name: Setup
+      - name: Setup Build Environment
         run: |
           choco install make
           choco install mingw
