attempt windows automated build 5

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           refreshenv
       - name: Update DLL
         run: |
-          zef install LibraryMake
+          zef install --/test LibraryMake
           raku Build.pm6 --rebuild
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
