starting work on a native StructElem representation

--- a/src/pdf/Makefile.in
+++ b/src/pdf/Makefile.in
@@ -6,14 +6,20 @@ all: %DEST%/%LIB_NAME%
 debug :
 	%MAKE% "DBG=-Wall -g"  all
 
-SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c read.c write.c
-OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% read%O% write%O% version%O%
+SRCS = buf.c cos.c cos_struct_elem.c filt_predict.c filt_predict_png.c filt_predict_tiff.c read.c write.c version.c
+OBJS = buf%O% cos%O% cos_struct_elem%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% read%O% write%O% version%O%
 
 %DEST%/%LIB_NAME%: $(OBJS)
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%%DEST%/%LIB_NAME% $(OBJS) $(LD_COV_OPT)
 
 buf%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ buf.c $(DBG)
+
+cos%O% :
+	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ cos.c $(DBG)
+
+cos_struct_elem%O% :
+	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ cos_struct_elem.c $(DBG)
 
 filt_predict%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ filt_predict.c $(DBG)
@@ -37,7 +43,7 @@ coverage-reports : all
 	gcov *.c
 
 clean :
-	@rm -f *%O% *.gc?? %DEST%/%LIB_NAME%
+	@rm -f *%O% ../cos/*%O% *.gc?? %DEST%/%LIB_NAME%
 
 realclean : clean
 	@rm -f Makefile .depend
