fix Makeile Windows compatibility

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,6 @@
 DocProj=pdf-raku.github.io
 DocRepo=https://github.com/pdf-raku/$(DocProj)
 DocLinker=../$(DocProj)/etc/resolve-links.raku
-TEST_JOBS ?= 6
 
 all :
 	cd src/pdf && %MAKE% all
@@ -16,7 +15,7 @@ test-coverage :
 	cd src/pdf && %MAKE% coverage-reports
 
 test : all
-	@prove -e'perl6 -I .' -j $(TEST_JOBS) t
+	@prove -e'perl6 -I .' -j 6 t
 
 loudtest : all
 	@prove -v -e'perl6 -I .' t
