--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Update DLL
         run: |
           zef install --/test LibraryMake
+          zef install --/test LibraryMake
+          zef install --/test LibraryMake
           raku Build.pm6 --rebuild
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
