--- a/src/pdf/Makefile.in
+++ b/src/pdf/Makefile.in
@@ -6,8 +6,8 @@ all: %DEST%/%LIB_NAME%
 debug :
 	%MAKE% "DBG=-Wall -g"  all
 
-SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c read.c write.c version.c cos.c cos_parse.c utf8.c
-OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% read%O% write%O% version%O% cos%O%  cos_parse%O% utf8%O%
+SRCS = buf.c filt_predict.c filt_predict_png.c filt_predict_tiff.c read.c write.c cos.c cos_parse.c utf8.c
+OBJS = buf%O% filt_predict%O% filt_predict_png%O% filt_predict_tiff%O% read%O% write%O% cos%O%  cos_parse%O% utf8%O%
 
 %DEST%/%LIB_NAME%: $(OBJS)
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%%DEST%/%LIB_NAME% $(OBJS) $(LD_COV_OPT)
@@ -38,10 +38,6 @@ read%O% :
 
 write%O% :
 	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ write.c $(DBG)
-
-version%O% :
-	%CC% -I .. -c %CCSHARED% %CCFLAGS% $(CC_COV_OPT) %CCOUT%$@ version.c $(DBG)
-
 
 coverage-reports : all
 	gcov *.c
